Issue #1882: when compiling code from a string, encoding cookies in the second line of code were not always recognized correctly.  (backport from rev. 60168)